--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,21 +1,24 @@
 body {
-    background: linear-gradient(red, black);
+    margin: 0;
 }
 
-#root {
+.cv-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 2.5rem;
     gap: 3rem;
+    background: linear-gradient(red, black);
 }
 
 .preview-button {
+    padding: 10px;
+    padding-left: 30px;
     width: 70%;
     display: flex;
-    justify-content: flex-end;
-    /* margin-bottom: 3rem; */
+    background-color:darkred;
+    width: 100%;
 }
 
 .preview-button > button {
